--- a/www/AddCategory/addcategory.css
+++ b/www/AddCategory/addcategory.css
@@ -55,7 +55,7 @@ input[type="text"], input[type="submit"] {
 	padding: 10px;
 	margin-bottom: 20px;
 	border-radius: 5px;
-	border: none;
+	border: 1px black solid;
 }
 
 input[type="submit"] {
