--- a/www/AddSite/addsite.css
+++ b/www/AddSite/addsite.css
@@ -48,3 +48,17 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #3e8e41;
 }
+
+.generate-password {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.generate-password:hover {
+    background-color: #323532;
+}
